--- a/src/components/ItemTable/style.css
+++ b/src/components/ItemTable/style.css
@@ -4,13 +4,15 @@ table, th, td {
     text-align: left;
 }
 
-table tr:hover {
+table tr:hover,
+table tr:nth-child(even):hover {
     background-color: #ccc;
 }
 
 table tr:nth-child(even) {
     background-color: #f1f1f1;
 }
+
 
 table td, table th {
     padding: 12px 16px;
