--- a/src/components/CustomerInfoInput/style.css
+++ b/src/components/CustomerInfoInput/style.css
@@ -3,4 +3,9 @@
         display: grid;
         grid-template-columns: 1fr 1fr;
     }
+    input::-webkit-outer-spin-button,
+    input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+    }
 }
