--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,15 @@
 #root {
   max-width: 1280px;
+  width: 100%;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+}
+
+button {
+  padding: 0.5rem;
+  border-radius: 5px;
+  border: solid 2px;
+  border-color: var(--primary-color);
+  cursor: pointer;
 }
