--- a/src/index.css
+++ b/src/index.css
@@ -8,4 +8,10 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+
+  --primary-color: #385F71;
+  --secondary-color: #F5F0F6;
+  --accent-color: #A4778B;
+  --validation-green-color: #72977F;
+  --validation-red-color: #DC4725;
 }
