--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,17 @@
+body {
+  margin: 0;
+  height: 100vh;
+}
+
 #root {
   max-width: 1280px;
   width: 100%;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 0 2rem;
   text-align: center;
+  background-color: var(--secondary-color);
+  height: fit-content;
+  min-height: 100vh;
 }
 
 button {
