--- a/src/components/CustomerInfoInput/style.css
+++ b/src/components/CustomerInfoInput/style.css
@@ -1,4 +1,9 @@
 @media screen and (min-width: 768px) {
+    .container h1 {
+        text-align: left;
+        margin: 0;
+    }
+    
     form {
         display: grid;
         grid-template-columns: 1fr 1fr ;
