--- a/src/App.css
+++ b/src/App.css
@@ -4,12 +4,10 @@ body {
 }
 
 #root {
-  max-width: 1280px;
-  width: 100%;
   margin: 0 auto;
   padding: 0 2rem;
   text-align: center;
-  background-color: var(--secondary-color);
+  /*background-color: var(--secondary-color);*/
   height: fit-content;
   min-height: 100vh;
 }
@@ -20,4 +18,12 @@ button {
   border: solid 2px;
   border-color: var(--primary-color);
   cursor: pointer;
+}
+
+@media screen and (min-width: 768px) {
+  #root {
+    max-width: 1280px;
+    width: 100%;
+    padding: 0 2rem;
+  }
 }
