--- a/src/components/CustomerAgreePrefsInput/style.css
+++ b/src/components/CustomerAgreePrefsInput/style.css
@@ -5,6 +5,12 @@
     gap: 1rem;
     margin-left: 7%;
     margin-top: 3rem;
+    grid-row-start: 3;
+}
+
+.required:after {
+    content:"  *";
+    color: var(--validation-red-color);
 }
 
 .input-wrapper {
