--- a/src/components/CustomerInfoInput/style.css
+++ b/src/components/CustomerInfoInput/style.css
@@ -1,3 +1,8 @@
+.required:after {
+    content:"  *";
+    color: var(--validation-red-color);
+}
+
 @media screen and (min-width: 768px) {
     .container h1 {
         text-align: left;
