--- a/src/components/CustomerAgreePrefsInput/style.css
+++ b/src/components/CustomerAgreePrefsInput/style.css
@@ -1,11 +1,9 @@
-.wrapper {
+.customeragree-wrapper {
     display: flex;
     flex-direction: column;
     align-items: baseline;
     gap: 1rem;
-    margin-left: 7%;
-    margin-top: 3rem;
-    grid-row-start: 3;
+    margin-left: 4rem;
 }
 
 .required:after {
@@ -28,30 +26,32 @@
     margin-top: 1rem;
 }
 
-.wrapper-navigation {
+.navigation-wrapper {
     display: flex;
     justify-content: end;
     gap: 1rem;
     width: 95%;
-    grid-column-start: 1;
-    grid-column-end: 3;
+    height: 90%;
+    align-items: end;
+}
+.navigation-wrapper button {
     height: fit-content;
 }
 
-.wrapper-navigation #back {
+.navigation-wrapper #back {
     background-color: var(--secondary-color);
     color: var(--primary-color);
 }
-.wrapper-navigation #back:hover {
+.navigation-wrapper #back:hover {
     background-color: var(--primary-color);
     color: var(--secondary-color);
 }
 
-.wrapper-navigation #pay {
+.navigation-wrapper #pay {
     background-color: var(--primary-color);
     color: var(--secondary-color);
 }
-.wrapper-navigation #pay:hover {
+.navigation-wrapper #pay:hover {
     background-color: var(--secondary-color);
     color: var(--primary-color);
 }
