--- a/src/pages/Checkout/style.css
+++ b/src/pages/Checkout/style.css
@@ -1,5 +1,5 @@
 .section-wrapper {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 2.5fr 2.5fr 0.5fr;
+    grid-template-rows: 1fr 3fr 2fr;
 }
