--- a/src/components/ShoppingCartSummary/style.css
+++ b/src/components/ShoppingCartSummary/style.css
@@ -7,7 +7,8 @@
 .summary button {
     background-color: var(--validation-green-color);
     color: var(--secondary-color);
-    margin: 8px 0;
+    border-color: var(--validation-green-color);
+    margin: 0.5rem 0;
 }
 
 .summary button:hover {
@@ -25,8 +26,8 @@
     .summary p {
         flex-basis: 100%;
         text-align: right;
-        padding: 2px 5px;
-        margin: 2px;
+        padding: 0.2rem 0.5rem;
+        margin: 0.2rem;
     }
 
 }
