small changes to nudging, still working on a solution

--- a/src/components/ItemTable/style.css
+++ b/src/components/ItemTable/style.css
@@ -43,6 +43,11 @@ table .product-image img {
     display: block;
 }
 
+.upsell:after {
+    content:" *";
+    color: var(--validation-green-color);
+}
+
 @media screen and (max-width: 480px) {
     table, tbody, tr, td {
         display: block;
