--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@
   --primary-color: #385F71;
   --secondary-color: #F5F0F6;
   --accent-color: #A4778B;
+  --secondary-accent-color: #F3F6F4;
   --validation-green-color: #72977F;
   --validation-red-color: #DC4725;
 }
