--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,9 @@ button {
   border-color: var(--primary-color);
   cursor: pointer;
 }
+button:disabled {
+  cursor: not-allowed;
+}
 
 @media screen and (min-width: 768px) {
   #root {
