--- a/src/components/CustomerInfoInput/style.css
+++ b/src/components/CustomerInfoInput/style.css
@@ -37,6 +37,10 @@ input[type=number] {
     -moz-appearance: textfield;
 }
 
+.error-bordercolor {
+    border-color: red;
+}
+
 @media screen and (min-width: 768px) {
     .container h1 {
         text-align: left;
